tests/fixtures/parser/should_fail/11_malformed_exponent.pas
(* should_fail: exponent requires >=1 digit; 'E' with none must not crash. *)
PROGRAM P;
CONST C = 1.5E;
BEGIN
END.
